--- a/about.html
+++ b/about.html
@@ -313,7 +313,7 @@
         <h2>Mission<img width="40" src="./img/objectiv.png" alt="" ></h2>
         <p style="text-align: justify;"> Notre mission est d'assister activement les personnes vulnérables en offrant un soutien et des ressources essentiels, de faciliter l'accès à une éducation de base de qualité et à des programmes de formation professionnelle pour les jeunes, de participer activement à la conservation et à la préservation de l'environnement et des ressources naturelles, de promouvoir et de valoriser la culture béninoise à travers diverses initiatives, et de défendre inlassablement les droits de l'homme en sensibilisant et en plaidant pour leur respect.</p>
       </section>
-      <section id="mission">
+      <!-- <section id="mission">
         <h2>Mission<img width="40" src="./img/mission.webp" alt="" ></h2>
         <p style="text-align: justify;"><ul style="margin: 0;list-style: none;">
           <li style="">Assister les prsonnes vulnérables</li>
@@ -322,7 +322,7 @@
           <li>Promouvoir et valoriser la culture béninoise</li>
           <li>Défendre et vulgariser les droits de l'homme</li>
         </ul></p>
-      </section>
+      </section> -->
     </main></div>
     <br>
     
