--- a/index.html
+++ b/index.html
@@ -637,11 +637,11 @@
         pour un monde meilleur pour tous. Nous croyons en l'importance de la
         solidarité, de l'éducation, de la préservation de l'environnement, de la
         promotion de la culture locale et du respect des droits de l'homme.
+        <a style="color: #FFC300;" href="temoignage.html">En savoir plus</a>
       </p>
 
-      <button class="mui-button success" style="color: #ccc">
-        <a href="temoignage.html">En savoir plus</a>
-      </button>
+    
+  
     </div>
     <h2 style="text-align: center; margin-top: 20px">
       Expérimenter une nouvelle dimension avec Dieu avec nos programmes de
@@ -669,9 +669,9 @@
       de la vie, et de trouver un apaisement dans un monde parfois agité. Ils
       sont une source d'inspiration, d'encouragement et d'élévation pour l'âme,
       offrant un moment de communion intime avec notreseigneur Jesus.
-      <button class="mui-button success" style="color: #ccc">
-        <a href="ministere.html">En savoir plus</a>
-      </button>
+   
+        <a style="color: #FFC300;" href="ministere.html">En savoir plus</a>
+   
     </p>
     <h2 style="text-align: center">Découvrez notre branche musicale : L'orchestre philharmonie La Grâce Parle</h2>
     <p style="padding: 15px">
@@ -686,9 +686,9 @@
       musique dans toute sa splendeur, incarnant l'élégance, la passion et la
       virtuosité. C'est un véritable trésor culturel qui continue à inspirer et
       à émouvoir les auditoires du monde entier.
-      <button class="mui-button success" style="color: #ccc">
-        <a href="philharmonie.html">En savoir plus
-      </button>
+   
+        <a style="color: #FFC300;" href="philharmonie.html">En savoir plus
+    
     </p>
     <!-- Testimonial Start -->
     <div class="container-xxl py-5">
