--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         ></iframe>
       </div>
     </div>
-
+    
     <!-- Spinner Start -->
     <div
       id="spinner"
@@ -537,7 +537,21 @@
       </div>
     </div>
     <!-- Carousel End -->
-
+    <div class="modalPresentation" id="myModal">
+      <div class="modal-contentPresentation">
+        <span class="close" id="close-btn">&times;</span>
+        <img
+          src="img/dalum1.jpg"
+          alt="Homme de Dieu"
+          class="modal-image"
+        />
+        <h2>Prendre rendez-vous</h2>
+        <p>Rencontrez un homme de Dieu pour une consultation spirituelle.</p>
+        <button class="mui-button success" style="color: #ccc">
+          <a href="temoignage.html">Les témoins de la grâce</a>
+        </button>
+      </div>
+    </div>
     <div class="container">
       <div class="box tall-box">
         <div class="flex-container">
