--- a/contact.html
+++ b/contact.html
@@ -203,6 +203,9 @@
               >
               <div class="dropdown-menu m-0">
                 <a href="contact.html" class="dropdown-item active"
+                  >Prendre un Rendez-vous</a
+                >
+                <a href="contact.html" class="dropdown-item active"
                   >Nous écrire un e-mail</a
                 >
 
