--- a/faq.html
+++ b/faq.html
@@ -205,6 +205,9 @@
               >
               <div class="dropdown-menu m-0">
                 <a href="contact.html" class="dropdown-item"
+                  >Prendre un Rendez-vous</a
+                >
+                <a href="contact.html" class="dropdown-item"
                   >Nous écrire un e-mail</a
                 >
 
