--- a/index.html
+++ b/index.html
@@ -451,6 +451,9 @@
               >
               <div class="dropdown-menu m-0">
                 <a href="contact.html" class="dropdown-item"
+                  >Prendre un Rendez-vous</a
+                >
+                <a href="contact.html" class="dropdown-item"
                   >Nous écrire un e-mail</a
                 >
 
@@ -546,9 +549,9 @@
           class="modal-image"
         />
         <h2>Prendre rendez-vous</h2>
-        <p>Rencontrez un homme de Dieu pour une consultation spirituelle.</p>
+        <p>Réservez une rencontre avec l'homme de Dieu en cliquant sur le lien ci-dessous. </p>
         <button class="mui-button success" style="color: #ccc">
-          <a href="temoignage.html">Les témoins de la grâce</a>
+          <a href="">Demander un Rendez-vous</a>
         </button>
       </div>
     </div>
