--- a/ministere.html
+++ b/ministere.html
@@ -344,6 +344,9 @@ padding: 15px;
               >
               <div class="dropdown-menu m-0">
                 <a href="contact.html" class="dropdown-item"
+                  >Prendre un Rendez-vous</a
+                >
+                <a href="contact.html" class="dropdown-item"
                   >Nous écrire un e-mail</a
                 >
                
